# DPDK-Dev

./: .gitignore  README.md  host_udp_server.py  initialize.sh
dpdk-23.11/: config.json  failover_stats.csv
dpdk-23.11/app/: meson.build
dpdk-23.11/app/pingpong-ping/: main.c  meson.build
dpdk-23.11/app/pingpong-pong/: main.c  meson.build
dpdk-23.11/app/raft/: RAFT.md  config.c  config.json  election.c  latency.c  main.c  measurement.c  meson.build  networking.c  timeout.c
dpdk-23.11/app/raft-netelect/: config.c  config.json  election.c  main.c  meson.build  metadata.c  networking.c  rtt_test.c  timeout.c
dpdk-23.11/app/raft-netelect-backup/: networking.c
dpdk-23.11/app/raft-netelect-backup/include/: election.h  latency.h  networking.h  packet.h
dpdk-23.11/app/raft-netelect/include/: config.h  metadata.h  networking.h  packet.h  timeout.h
dpdk-23.11/app/raft/include/: config.h  election.h  latency.h  measurement.h  metadata.h  networking.h  packet.h
dpdk-23.11/app/raft_netelect/: latency.c  networking.c
dpdk-23.11/app/raft_netelect/include/: packet.h
dpdk-23.11/app/see-metadata/: main.c  meson.build
dpdk-23.11/app/sense/: api.c  config.c  config.json  main.c  meson.build  metadata.c  networking.c  stats.c
dpdk-23.11/app/sense/include/: api.h  config.h  metadata.h  networking.h  packet.h  sense_mp.h  stats.h
dpdk-23.11/examples/: meson.build
dpdk-23.11/examples/pingpong/: main.c
dpdk-23.11/examples/pingpong_pong/: main.c
examples/: meson.build
examples/pingpong/: main.c  meson.build
examples/pingpong_2/: main.c
script/: bind-NIC 2.sh  bind-NIC.sh  get-hugepage-available.sh  kill-leader.py  monitor_probe.sh  start-log-session.sh
